pcl/output/bloodClassParser.java
// $ANTLR 3.5.1 /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g 2020-12-24 13:34:01

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class bloodClassParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ATTRIB", "BLOC", "CAST", "CLASS", 
		"CLASSE", "CLASSNAME", "COMMENT", "COND_EXP", "CONSTR", "DECL_VAR", "DEF_BLOC", 
		"DEF_METH_CONS", "ENVOI_MESS", "ENVOI_MESS_CONS", "EXP_CONST", "EXTENDS", 
		"IF", "INSTAN", "METHODE_DEF", "NAME", "NB", "NEW", "PARAM", "RESULT", 
		"ROOT", "STRING", "SUPER_CONS", "WHILE", "WS", "' is'", "'&'", "'('", 
		"')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'", "':='", "';'", 
		"'<'", "'<>'", "'='", "'>'", "'Integer'", "'String'", "'as'", "'class'", 
		"'def'", "'do'", "'else'", "'extends'", "'if'", "'is'", "'new'", "'override'", 
		"'result'", "'return'", "'static'", "'super'", "'then'", "'this'", "'var'", 
		"'while'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int ATTRIB=4;
	public static final int BLOC=5;
	public static final int CAST=6;
	public static final int CLASS=7;
	public static final int CLASSE=8;
	public static final int CLASSNAME=9;
	public static final int COMMENT=10;
	public static final int COND_EXP=11;
	public static final int CONSTR=12;
	public static final int DECL_VAR=13;
	public static final int DEF_BLOC=14;
	public static final int DEF_METH_CONS=15;
	public static final int ENVOI_MESS=16;
	public static final int ENVOI_MESS_CONS=17;
	public static final int EXP_CONST=18;
	public static final int EXTENDS=19;
	public static final int IF=20;
	public static final int INSTAN=21;
	public static final int METHODE_DEF=22;
	public static final int NAME=23;
	public static final int NB=24;
	public static final int NEW=25;
	public static final int PARAM=26;
	public static final int RESULT=27;
	public static final int ROOT=28;
	public static final int STRING=29;
	public static final int SUPER_CONS=30;
	public static final int WHILE=31;
	public static final int WS=32;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "bloc", "methodeDef", "choixNameClass", "prog", "blocDeClasse", 
		"atom", "instruction", "identificateur", "consSuper", "condExpr", "permClassNameAvecExpr", 
		"devPerm", "expr2", "constante", "declaration_variable", "classDef", "formalParam", 
		"expression", "expr1", "blocSansCons", "whileBoucle", "methodeOuCons", 
		"attribDef", "instanciation", "choixHeritage", "name", "condition", "progPrincipal", 
		"consDef", "className"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public bloodClassParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public bloodClassParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public bloodClassParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return bloodClassParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:43:1: prog : ( classDef )* progPrincipal -> ^( ROOT ( classDef )* progPrincipal ) ;
	public final bloodClassParser.prog_return prog() throws RecognitionException {
		bloodClassParser.prog_return retval = new bloodClassParser.prog_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope classDef1 =null;
		ParserRuleReturnScope progPrincipal2 =null;

		RewriteRuleSubtreeStream stream_progPrincipal=new RewriteRuleSubtreeStream(adaptor,"rule progPrincipal");
		RewriteRuleSubtreeStream stream_classDef=new RewriteRuleSubtreeStream(adaptor,"rule classDef");

		try { dbg.enterRule(getGrammarFileName(), "prog");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(43, 0);

		try {
			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:43:6: ( ( classDef )* progPrincipal -> ^( ROOT ( classDef )* progPrincipal ) )
			dbg.enterAlt(1);

			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:43:8: ( classDef )* progPrincipal
			{
			dbg.location(43,8);
			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:43:8: ( classDef )*
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==53) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:43:8: classDef
					{
					dbg.location(43,8);
					pushFollow(FOLLOW_classDef_in_prog123);
					classDef1=classDef();
					state._fsp--;

					stream_classDef.add(classDef1.getTree());
					}
					break;

				default :
					break loop1;
				}
			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(43,18);
			pushFollow(FOLLOW_progPrincipal_in_prog126);
			progPrincipal2=progPrincipal();
			state._fsp--;

			stream_progPrincipal.add(progPrincipal2.getTree());
			// AST REWRITE
			// elements: classDef, progPrincipal
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 43:32: -> ^( ROOT ( classDef )* progPrincipal )
			{
				dbg.location(43,35);
				// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:43:35: ^( ROOT ( classDef )* progPrincipal )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(43,37);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);
				dbg.location(43,42);
				// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:43:42: ( classDef )*
				while ( stream_classDef.hasNext() ) {
					dbg.location(43,42);
					adaptor.addChild(root_1, stream_classDef.nextTree());
				}
				stream_classDef.reset();
				dbg.location(43,52);
				adaptor.addChild(root_1, stream_progPrincipal.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(44, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "prog");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "prog"


	public static class progPrincipal_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "progPrincipal"
	// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:47:1: progPrincipal : bloc ;
	public final bloodClassParser.progPrincipal_return progPrincipal() throws RecognitionException {
		bloodClassParser.progPrincipal_return retval = new bloodClassParser.progPrincipal_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope bloc3 =null;


		try { dbg.enterRule(getGrammarFileName(), "progPrincipal");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(47, 0);

		try {
			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:48:2: ( bloc )
			dbg.enterAlt(1);

			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:48:3: bloc
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(48,3);
			pushFollow(FOLLOW_bloc_in_progPrincipal150);
			bloc3=bloc();
			state._fsp--;

			adaptor.addChild(root_0, bloc3.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(49, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "progPrincipal");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "progPrincipal"


	public static class classDef_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "classDef"
	// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:52:1: classDef : 'class' className '(' ( formalParam ( ',' formalParam )* )? ')' choixHeritage -> ^( CLASSE className ( formalParam )* choixHeritage ) ;
	public final bloodClassParser.classDef_return classDef() throws RecognitionException {
		bloodClassParser.classDef_return retval = new bloodClassParser.classDef_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal4=null;
		Token char_literal6=null;
		Token char_literal8=null;
		Token char_literal10=null;
		ParserRuleReturnScope className5 =null;
		ParserRuleReturnScope formalParam7 =null;
		ParserRuleReturnScope formalParam9 =null;
		ParserRuleReturnScope choixHeritage11 =null;

		Object string_literal4_tree=null;
		Object char_literal6_tree=null;
		Object char_literal8_tree=null;
		Object char_literal10_tree=null;
		RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
		RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
		RewriteRuleSubtreeStream stream_formalParam=new RewriteRuleSubtreeStream(adaptor,"rule formalParam");
		RewriteRuleSubtreeStream stream_className=new RewriteRuleSubtreeStream(adaptor,"rule className");
		RewriteRuleSubtreeStream stream_choixHeritage=new RewriteRuleSubtreeStream(adaptor,"rule choixHeritage");

		try { dbg.enterRule(getGrammarFileName(), "classDef");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(52, 0);

		try {
			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:53:2: ( 'class' className '(' ( formalParam ( ',' formalParam )* )? ')' choixHeritage -> ^( CLASSE className ( formalParam )* choixHeritage ) )
			dbg.enterAlt(1);

			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:53:3: 'class' className '(' ( formalParam ( ',' formalParam )* )? ')' choixHeritage
			{
			dbg.location(53,3);
			string_literal4=(Token)match(input,53,FOLLOW_53_in_classDef161);  
			stream_53.add(string_literal4);
			dbg.location(53,11);
			pushFollow(FOLLOW_className_in_classDef163);
			className5=className();
			state._fsp--;

			stream_className.add(className5.getTree());dbg.location(53,21);
			char_literal6=(Token)match(input,35,FOLLOW_35_in_classDef165);  
			stream_35.add(char_literal6);
			dbg.location(53,25);
			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:53:25: ( formalParam ( ',' formalParam )* )?
			int alt3=2;
			try { dbg.enterSubRule(3);
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==NAME||LA3_0==68) ) {
				alt3=1;
			}
			} finally {dbg.exitDecision(3);}

			switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:53:26: formalParam ( ',' formalParam )*
					{
					dbg.location(53,26);
					pushFollow(FOLLOW_formalParam_in_classDef168);
					formalParam7=formalParam();
					state._fsp--;

					stream_formalParam.add(formalParam7.getTree());dbg.location(53,38);
					// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:53:38: ( ',' formalParam )*
					try { dbg.enterSubRule(2);

					loop2:
					while (true) {
						int alt2=2;
						try { dbg.enterDecision(2, decisionCanBacktrack[2]);

						int LA2_0 = input.LA(1);
						if ( (LA2_0==39) ) {
							alt2=1;
						}

						} finally {dbg.exitDecision(2);}

						switch (alt2) {
						case 1 :
							dbg.enterAlt(1);

							// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:53:39: ',' formalParam
							{
							dbg.location(53,39);
							char_literal8=(Token)match(input,39,FOLLOW_39_in_classDef171);  
							stream_39.add(char_literal8);
							dbg.location(53,43);
							pushFollow(FOLLOW_formalParam_in_classDef173);
							formalParam9=formalParam();
							state._fsp--;

							stream_formalParam.add(formalParam9.getTree());
							}
							break;

						default :
							break loop2;
						}
					}
					} finally {dbg.exitSubRule(2);}

					}
					break;

			}
			} finally {dbg.exitSubRule(3);}
			dbg.location(53,59);
			char_literal10=(Token)match(input,36,FOLLOW_36_in_classDef179);  
			stream_36.add(char_literal10);
			dbg.location(53,63);
			pushFollow(FOLLOW_choixHeritage_in_classDef181);
			choixHeritage11=choixHeritage();
			state._fsp--;

			stream_choixHeritage.add(choixHeritage11.getTree());
			// AST REWRITE
			// elements: choixHeritage, formalParam, className
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 53:77: -> ^( CLASSE className ( formalParam )* choixHeritage )
			{
				dbg.location(53,80);
				// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:53:80: ^( CLASSE className ( formalParam )* choixHeritage )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(53,82);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASSE, "CLASSE"), root_1);
				dbg.location(53,89);
				adaptor.addChild(root_1, stream_className.nextTree());dbg.location(53,99);
				// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:53:99: ( formalParam )*
				while ( stream_formalParam.hasNext() ) {
					dbg.location(53,99);
					adaptor.addChild(root_1, stream_formalParam.nextTree());
				}
				stream_formalParam.reset();
				dbg.location(53,112);
				adaptor.addChild(root_1, stream_choixHeritage.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(54, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "classDef");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "classDef"


	public static class choixHeritage_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "choixHeritage"
	// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:57:1: choixHeritage : ( 'extends' className ' is' '{' blocDeClasse '}' -> ^( EXTENDS className blocDeClasse ) | ' is' '{' blocDeClasse '}' -> blocDeClasse );
	public final bloodClassParser.choixHeritage_return choixHeritage() throws RecognitionException {
		bloodClassParser.choixHeritage_return retval = new bloodClassParser.choixHeritage_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal12=null;
		Token string_literal14=null;
		Token char_literal15=null;
		Token char_literal17=null;
		Token string_literal18=null;
		Token char_literal19=null;
		Token char_literal21=null;
		ParserRuleReturnScope className13 =null;
		ParserRuleReturnScope blocDeClasse16 =null;
		ParserRuleReturnScope blocDeClasse20 =null;

		Object string_literal12_tree=null;
		Object string_literal14_tree=null;
		Object char_literal15_tree=null;
		Object char_literal17_tree=null;
		Object string_literal18_tree=null;
		Object char_literal19_tree=null;
		Object char_literal21_tree=null;
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleTokenStream stream_57=new RewriteRuleTokenStream(adaptor,"token 57");
		RewriteRuleTokenStream stream_70=new RewriteRuleTokenStream(adaptor,"token 70");
		RewriteRuleTokenStream stream_71=new RewriteRuleTokenStream(adaptor,"token 71");
		RewriteRuleSubtreeStream stream_blocDeClasse=new RewriteRuleSubtreeStream(adaptor,"rule blocDeClasse");
		RewriteRuleSubtreeStream stream_className=new RewriteRuleSubtreeStream(adaptor,"rule className");

		try { dbg.enterRule(getGrammarFileName(), "choixHeritage");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(57, 0);

		try {
			// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:58:2: ( 'extends' className ' is' '{' blocDeClasse '}' -> ^( EXTENDS className blocDeClasse ) | ' is' '{' blocDeClasse '}' -> blocDeClasse )
			int alt4=2;
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==57) ) {
				alt4=1;
			}
			else if ( (LA4_0==33) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:58:3: 'extends' className ' is' '{' blocDeClasse '}'
					{
					dbg.location(58,3);
					string_literal12=(Token)match(input,57,FOLLOW_57_in_choixHeritage206);  
					stream_57.add(string_literal12);
					dbg.location(58,13);
					pushFollow(FOLLOW_className_in_choixHeritage208);
					className13=className();
					state._fsp--;

					stream_className.add(className13.getTree());dbg.location(58,23);
					string_literal14=(Token)match(input,33,FOLLOW_33_in_choixHeritage210);  
					stream_33.add(string_literal14);
					dbg.location(58,29);
					char_literal15=(Token)match(input,70,FOLLOW_70_in_choixHeritage212);  
					stream_70.add(char_literal15);
					dbg.location(58,32);
					pushFollow(FOLLOW_blocDeClasse_in_choixHeritage213);
					blocDeClasse16=blocDeClasse();
					state._fsp--;

					stream_blocDeClasse.add(blocDeClasse16.getTree());dbg.location(58,44);
					char_literal17=(Token)match(input,71,FOLLOW_71_in_choixHeritage214);  
					stream_71.add(char_literal17);

					// AST REWRITE
					// elements: className, blocDeClasse
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 58:48: -> ^( EXTENDS className blocDeClasse )
					{
						dbg.location(58,51);
						// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:58:51: ^( EXTENDS className blocDeClasse )
						{
						Object root_1 = (Object)adaptor.nil();
						dbg.location(58,53);
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(EXTENDS, "EXTENDS"), root_1);
						dbg.location(58,61);
						adaptor.addChild(root_1, stream_className.nextTree());dbg.location(58,71);
						adaptor.addChild(root_1, stream_blocDeClasse.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/delaporte/Documents/Compil/pcl-2020_2021/bloodClass.g:59:3: ' is' '{' blocDeClasse '}'
					{
					dbg.location(59,3);
					string_literal18=(Token)match(input,33,FOLLOW_33_in_choixHeritage228);  
					stream_33.add(string_literal18);
					dbg.location(59,9);
					char_literal19=(Token)match(input,70,FOLLOW_70_in_choixHeritage230);  
					stream_70.add(char_literal19);
					dbg.location(59,12);
					pushFollow(FOLLOW_blocDeClasse_in_choixHeritage231);
					blocDeClasse20=blocDeClasse();
					state._fsp--;

					stream_blocDeClasse.add(blocDeClasse20.getTree());dbg.location(59,24);
					char_literal21=(Token)match(input,71,FOLLOW_71_in_choixHeritage232);  
					stream_71.add(char_literal21);
